[package]
name = "iridium-prototype"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gateway"
path = "./src/gateway.rs"

[dependencies]
async-trait = "0.1.89"
bytes = "1.10.1"
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.28"
pingora = { version = "0.6.0", features = ["boringssl", "cache", "lb", "proxy", "time"] }
pingora-core = "0.6.0"
pingora-http = "0.6.0"
pingora-proxy = "0.6.0"
prometheus = "0.14.0"
tokio = { version = "1.48.0", features = ["macros", "net"] }
